# easy_ffi

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
